--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,9 @@
 {
-  "excludeWeekends": true,
+  "excludeWeekends": false,
   "excludedWorkDates": ["2024-01-01", "2024-01-05"],
   "permissibleCapacityDiscrepancy": 1,
   "crewRecommended": true,
-  "considerScopes": true,
-  "considerCertifications": true,
-  "considerSkills": true
+  "considerScopes": false,
+  "considerCertifications": false,
+  "considerSkills": false
 }
