--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Odvin/gantt-tetris-demo#readme",
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "exceljs": "^4.4.0",
     "mustache": "^4.2.0"
   }
 }
